--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
         </header>
 
         <nav>
-
+            <ul>
+                <li>Home</li> <!--this index is the homepage-->
+                <li><a href="https://example.com">Information</a></li>
+                <li><a href="https://example.com">About Us</a></li>
+                <li><a href="https://example.com">Purchase "Not today, Mr. Leopard!" Pack</a></li>
+            </ul>
         </nav>
 
         <main>
+            <div>
+                <h2>Hello There!</h2>
+                <p>This website teaches you how to avoid scams and purchase packs (that are 100% legit)</p>
+            </div>
+
             <aside>
 
             </aside>
