--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
 
         <main>
             <div>
-                <h2>Hello There!</h2>
-                <p>This website teaches you how to avoid scams and purchase packs (that are 100% legit)</p>
+                <h2>[HOME] Hello There!</h2>
+                <p>This website teaches you how to avoid scams and purchase packs (that are 100% legit).</p>
             </div>
 
             <aside>
-
+                <ul>
+                    <li>Learn how not to get scammed in the "Information" section</li>
+                    <li>Purchase the totally legit "Not today, Mr. Leopard" in the "Not today, Mr. Leopard" section</li>
+                    <li>Learn about this website and the information it provides in the "About us" section</li>
+                </ul>
             </aside>
         </main>
 
