--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <aside>
                 <ul>
                     <li>Learn how not to get scammed in the "Information" section</li>
-                    <li>Purchase the totally legit "Not today, Mr. Leopard" in the "Not today, Mr. Leopard" section</li>
+                    <li>Purchase the totally legit "Not today, Mr. Leopard" in the "Purchase 'Not today, Mr. Leopard' Pack" section</li>
                     <li>Learn about this website and the information it provides in the "About us" section</li>
                 </ul>
             </aside>
