--- a/numberguessinggame.html
+++ b/numberguessinggame.html
@@ -92,7 +92,7 @@
                 guessField.focus();
             }
 
-            guessSubmit.addEventListener("Click", checkGuess);
+            guessSubmit.addEventListener("click", checkGuess);
 
             function setGameOver() {
                 guessField.disabled = true;
