--- a/numberguessinggame.html
+++ b/numberguessinggame.html
@@ -66,7 +66,7 @@
                     guesses.textContent = "Previous guesses:";
                 }
 
-                guesses.textContent = ${guesses.textContent} ${userGuess};
+                guesses.textContent = `${guesses.textContent} ${userGuess}`;
 
                 if (userGuess === randomNumber) {
                     lastResult.textContent = "Congratualations! You got it right!";
