--- a/assets/index.html
+++ b/assets/index.html
@@ -59,7 +59,7 @@
         <img src="https://4fbe57a2-0570-486a-847c-aa2f12226813.mdnplay.dev/shared-assets/images/examples/leopard.jpg" 
         alt="LEOPARD WHO WILL DESTORY YOU"
         height=400
-        width="1000"
+        width="1000"/>
         <p><emph>Beware of the leopard...</emph></p>
         <p>He eats unsuspecting bird watchers...</p>
         <p>UNLESS YOU PAY $4.99 FOR OUR MONTHLY "NOT TODAY, MR. LEOPARD!" PACK!</p>
