line space attempt 2

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
             <aside>
                 <ul>
-                    <li>Learn how not to get scammed in the "Information" section\n</li>
-                    <li>Purchase the totally legit "Not today, Mr. Leopard" in the "Purchase 'Not today, Mr. Leopard' Pack" section\n</li>
-                    <li>Learn about this website and the information it provides in the "About us" section\n</li>
+                    <li>Learn how not to get scammed in the "Information" section<br></li>
+                    <li>Purchase the totally legit "Not today, Mr. Leopard" in the "Purchase 'Not today, Mr. Leopard' Pack" section<br></li>
+                    <li>Learn about this website and the information it provides in the "About us" section<br></li>
                 </ul>
             </aside>
         </main>
