--- a/assets/index.html
+++ b/assets/index.html
@@ -63,6 +63,7 @@
         <p><emph>Beware of the leopard...</emph></p>
         <p>He eats unsuspecting bird watchers...</p>
         <p>UNLESS YOU PAY $4.99 FOR OUR MONTHLY "NOT TODAY, MR. LEOPARD!" PACK!</p>
+        <p><a href="https://lavnertest1.github.io/index.html">[Link here]</a></p>
         <!--(#2)-->
 
       </footer>
