--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <div>
                 <h2>[HOME] Hello There!</h2>
-                <p>This website teaches you how to avoid scams and purchase packs (that are 100% legit).</p>
+                <p>This website teaches you how to avoid scams and purchase packs (that are 100% legit). Make sure to check out the whole website!</p>
             </div>
 
             <aside>
