--- a/Leopard.html
+++ b/Leopard.html
@@ -40,7 +40,7 @@
                     <li>You will have peace of mind<br></li>
                     <li>It is very cheap (and effective)<br></li>
                     <li>Better safe than sorry<br></li>
-                    <li>Refer to <a href="LavnerTest1.github.io/assets/index.html">this link</a> to learn more about this pack<br></li>
+                    <li>Refer to <a href="https://lavnertest1.github.io/assets/index.html">this link</a> to learn more about this pack<br></li>
                 </ul>
             </aside>
         </main>
