--- a/Leopard.html
+++ b/Leopard.html
@@ -24,7 +24,7 @@
         <main>
             <div>
                 <h2>[Purchase "Not today, Mr. Leopard!" Pack] Hello There!</h2>
-                <p>The "Not today, Mr. Leopard!" pack has many benfits</p>
+                <p>The "Not today, Mr. Leopard!" pack has many benfits.</p>
                 <h3>Your Cart:</h3>
                 <ul>
                     <li>"Not today, Mr. Leopard!" pack - $4.99</li>
@@ -45,7 +45,7 @@
 
                 function scam() {
                     numField.value="";
-                    scamMessage = document.textContent = "YOU GOT SCAMMED IMAGINE"
+                    scamMessage = document.textContent = "YOU GOT SCAMMED IMAGINE (This is fake, you didn't get scammed)"
                 }
 
                 numSubmit.addEventListener("click", scam);
