--- a/Leopard.html
+++ b/Leopard.html
@@ -45,7 +45,7 @@
 
                 function scam() {
                     numField.value="";
-                    scamMessage = document.textContent = "YOU GOT SCAMMED IMAGINE (This is fake, you didn't get scammed)"
+                    scamMessage.textContent = "YOU GOT SCAMMED IMAGINE (This is fake, you didn't get scammed)"
                 }
 
                 numSubmit.addEventListener("click", scam);
