--- a/Leopard.html
+++ b/Leopard.html
@@ -23,7 +23,7 @@
 
         <main>
             <div>
-                <h2>[Purchase "Not today, Mr. Leopard!" Pack] Hello There!</h2>
+                <h2>[PURCAHSE "Not today, Mr. Leopard!" PACK] Hello There!</h2>
                 <p>The "Not today, Mr. Leopard!" pack has many benfits.</p>
                 <h3>Your Cart:</h3>
                 <ul>
