--- a/Info.html
+++ b/Info.html
@@ -24,7 +24,7 @@
         <main>
             <div>
                 <h2>[INFORMATION] Hello There!</h2>
-                <p>Make sure not to click on trusted links, or else you will get scammed. Only click on scetchy links such as newamazon.com, mrleo.com, joelsplace.com, and stealurdebitcard.com (Do not actually do this, this website has no connections to the listed websites websites).</p>
+                <p>Make sure not to click on trusted links, or else you will get scammed. Only click on scetchy links such as newamazon.com, mrleo.com, joelsplace.com, and stealurdebitcard.com (Do not actually do this, this website has no connections to the listed websites).</p>
             </div>
 
             <aside>
