--- a/Leopard.html
+++ b/Leopard.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="https://lavnertest1.github.io/index.html">Home</a></li>
-                <li><a href="https://example.com">Information</a></li>
+                <li><a href="https://lavnertest1.github.io/Info.html">Information</a></li>
                 <li><a href="https://example.com">About Us</a></li>
                 <li>Purchase "Not today, Mr. Leopard!" Pack</li> <!--this is the section this file focuses on-->
             </ul>
