--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>Home</li> <!--this index is the homepage-->
-                <li><a href="https://example.com">Information</a></li>
+                <li><a href="https://lavnertest1.github.io/Info.html">Information</a></li>
                 <li><a href="https://example.com">About Us</a></li>
                 <li><a href="https://lavnertest1.github.io/Leopard.html">Purchase "Not today, Mr. Leopard!" Pack</a></li>
             </ul>
