--- a/assets/index.html
+++ b/assets/index.html
@@ -61,7 +61,7 @@
         height=400
         width="1000"/>
         <p><emph>Beware of the leopard...</emph></p>
-        <p>He eats unsuspecting bird watchers...</p>
+        <p>He eats unsuspecting bird watchers...  (This is fake)</p>
         <p>UNLESS YOU PAY $4.99 FOR OUR MONTHLY "NOT TODAY, MR. LEOPARD!" PACK!</p>
         <p><a href="https://lavnertest1.github.io/index.html">[Link here]</a></p>
         <!--(#2)-->
