--- a/Info.html
+++ b/Info.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="https://lavnertest1.github.io/index.html">Home</a></li> 
                 <li>Information</li> <!--This is the info page-->
-                <li><a href="https://example.com">About Us</a></li>
+                <li><a href="https://lavnertest1.github.io/aboutus.html">About Us</a></li>
                 <li><a href="https://lavnertest1.github.io/Leopard.html">Purchase "Not today, Mr. Leopard!" Pack</a></li>
             </ul>
         </nav>
