--- a/Leopard.html
+++ b/Leopard.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="https://lavnertest1.github.io/index.html">Home</a></li>
                 <li><a href="https://lavnertest1.github.io/Info.html">Information</a></li>
-                <li><a href="https://example.com">About Us</a></li>
+                <li><a href="https://lavnertest1.github.io/aboutus.html">About Us</a></li>
                 <li>Purchase "Not today, Mr. Leopard!" Pack</li> <!--this is the section this file focuses on-->
             </ul>
         </nav>
