--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li>Home</li> <!--this index is the homepage-->
                 <li><a href="https://lavnertest1.github.io/Info.html">Information</a></li>
-                <li><a href="https://example.com">About Us</a></li>
+                <li><a href="https://lavnertest1.github.io/aboutus.html">About Us</a></li>
                 <li><a href="https://lavnertest1.github.io/Leopard.html">Purchase "Not today, Mr. Leopard!" Pack</a></li>
             </ul>
         </nav>
