--- a/Info.html
+++ b/Info.html
@@ -24,9 +24,9 @@
         <main>
             <div>
                 <h2>[INFORMATION] Hello There!</h2>
-                <p>Make sure not to click on trusted links, or else you will get scammed. Only click on scetchy links such as newamazon.com, mrleo.com, joelsplace.com, and stealurdebitcard.com (Do not actually do this, this website has no connections to the listed websites, so visit them at your own risk).</p>
+                <p>Make sure not to click on trusted links, or else you will get scammed. Only click on scetchy links such as bobshouse.com, mrleo.com, joelsplace.com, and stealurdebitcard.com (Do not actually do this, this website has no connections to the listed websites, so visit them at your own risk).</p>
             </div>
-
+<!--old link was newamazon.com, but it is real scam link, so i removed it-->
             <aside>
                 <h3>Examples of links not to click on:</h3>
                 <ul>
