--- a/index.html
+++ b/index.html
@@ -35,7 +35,21 @@
                 </ul>
             </aside>
         </main>
-
+        <script>
+            let password = "";
+            if(password=="42"){
+                console.log("You have unlocked the secrets to this universe");
+                setTimeout(function(){
+                    console.log("I wasn't supposed to tell you that...");
+                }, 5000)
+                setTimeout(function(){
+                    console.log("Forget that. This was all a dream...");
+                }, 5000)
+                setTimeout(function(){
+                    window.location.replace('https://tinyurl.com/mrbirdworld');
+                }, 5000)
+            }
+        </script>
 
     </body>
 </html>
